2006-01-14 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Version 2.2.5:
	* Correction to the useEmailAsUsername property: when set, the username was erased on editing the profile.

2006-01-10 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Version 2.2.4:
	* Correction to the generateUsername property: when set, the username was erased on editing the profile.
	* For TCA-driven select fields, if no default value is set in TS template, apply default value from TCA, if present.

2006-01-08 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Version 2.2.3:
	* Update to Danish, Norwegian and Turkish translations.

2006-01-08 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Version 2.2.3:
	* Allow to override TCA labels in TS template setup
	* Add generateUsername setup property.
	* Add registrationProcess_beforeConfirmCreate hook. Thanks to Pieter Verstraelen.

2005-12-05  Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Use backURL linkVar to link back from the edit page, after saving, to some referring extension such as tt_products. Thanks to Franz Holzinger.
	
2005-12-04  Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Correction: setting usergroupAfterAcceptation did not work if the original usergroup assigned at creation was changed by usergroupAfterConfirmation.

2005-11-30  Franz Holzinger  <kontakt@fholzinger.com>
	* German texts for the flexform

2005-11-28  Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Eliminate error subpart when a required field is missing but no other validation error is raised.
	* Minor improvement to html template.

2005-11-26  Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Version 2.2.1:
	* Fix in ext_localconf.php
	* Documentation update.
	
2005-11-25  Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Added support for backend flexforms by Franz Holzinger.
	