@@ -2674,7 +2674,7 @@ The user is informed that a message has been sent to the email address and that 
 
 
 <p style="margin-top: 20px"><em>This template is used to send a welcome email when the registration of a person was confirmed.</em></p>
-<!-- ###EMAIL_TEMPLATE_SETFIXED_ACCEPT### begin -->
+<!-- ###EMAIL_TEMPLATE_SETFIXED_REFUSE### begin -->
 <!-- ###SUB_RECORD### -->###LABEL_V_REGISTRATION_REFUSED_SUBJECT2###
 
 ###LABEL_V_DEAR###
