@@ -166,7 +166,7 @@ plugin.tx_srfeuserregister_pi1 {
 		zip = trim
 		image = files
 		module_sys_dmail_html = setEmptyIfAbsent
-		module_sys_dmail_category = setEmptyIfAbsent
+		module_sys_dmail_category = multiple
 		www = wwwURL
 		usergroup = multiple
 	}
